[tool.poetry]
name = "java-driver"
version = "3.7.1"
description = "ScyllaDB Java Driver"
authors = ["Java Driver Contributors"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "6.0"
pygments = "2.2.0"
recommonmark = "0.7.1"
redirects_cli ="~0.1.3"
sphinx-scylladb-theme = "~1.4.1"
sphinx-sitemap = "2.1.0"
sphinx-autobuild = "2021.3.14"
Sphinx = "4.3.2"
sphinx-multiversion-scylla = "~0.2.12"
setuptools = "^65.6.3"
wheel = "^0.38.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api" 
