[tool.poetry]
name = "java-driver"
version = "3.7.1"
description = "ScyllaDB Java Driver"
authors = ["Java Driver Contributors"]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "6.0.1"
pygments = "2.15.1"
redirects_cli ="~0.1.3"
sphinx-scylladb-theme = "~1.7.2"
sphinx-sitemap = "2.5.1"
sphinx-autobuild = "2021.3.14"
Sphinx = "7.2.6"
sphinx-multiversion-scylla = "~0.3.1"
setuptools = "^65.6.3"
wheel = "^0.38.4"
sphinx-scylladb-markdown = "^0.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api" 
